samples/_failures_safe/1761160411_de0961_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d5b400f1.c: In function ‘main’:
./samples/SAFE/__tmp_d5b400f1.c:145:11: error: expected ‘;’ at end of input
  145 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_d5b400f1.c:145:5: error: expected declaration or statement at end of input
  145 |     printf
      |     ^~~~~~
